--- a/Front-End Warm Up/css/custom.css
+++ b/Front-End Warm Up/css/custom.css
@@ -3,13 +3,14 @@
 }
 
 ul{
-list-style-type:none;
+    list-style-type:none;
 }
 
 .alert {
 display: none;
 }
 
-.faq {
+/*.faq {
     display:none;
-}
+}*/
+  
